// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Property  Property can create a listing with optional arg, frequency weekly 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "bookings": Array [],
        "city": "Germany2",
        "deposit": 0,
        "description": "",
        "hourlyPrice": 0,
        "images": Array [
          "",
        ],
        "isVerified": false,
        "owner": Object {
          "email": "user1@gmail.com",
          "fullName": "User 1",
          "id": "1",
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [],
        "serviceFee": 0,
        "size": 0,
        "street": "FoodleStreet",
        "streetNumber": 0,
        "title": "titlee",
        "zip": 0,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property can create a listing, frequency weekly and multiple days per week 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "bookings": Array [],
        "city": "Germany2",
        "deposit": 0,
        "description": "",
        "hourlyPrice": 0,
        "images": Array [
          "",
        ],
        "isVerified": false,
        "owner": Object {
          "email": "user1@gmail.com",
          "fullName": "User 1",
          "id": "1",
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [],
        "serviceFee": 0,
        "size": 0,
        "street": "FoodleStreet",
        "streetNumber": 0,
        "title": "titlee",
        "zip": 0,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when a listing city string arg out of max range 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "City name Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean mm is invalid, must have a max length of 50 characters.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when a listing descriptiosn arg out of max range 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "Description Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nsdfsfsfsdfsdf is invalid, must have a max length of 1000 characters.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when a listing street arg out of max range 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "Street name Lorem ipsum dolor sit amet, consectetsuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean mm is invalid, must have a max length of 50 characters.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when a listing zip code arg out of max range 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "Zip code 123456 is invalid, must have a max length of 5 characters.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when availableDays is empty 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "List argument availableDays must not be empty.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when startDate is after endDate 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "startDate should be before endDate",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when wrong DateTime format 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [UserInputError: Variable "$startDate" got invalid value "2022-05-15T16:051.0"; Expected type DateTime. DateTime cannot represent an invalid date-time-string 2022-05-15T16:051.0.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property can create a listing, frequency monthly 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "bookings": Array [],
        "city": "Germany2",
        "deposit": 0,
        "description": "",
        "hourlyPrice": 0,
        "images": Array [
          "",
        ],
        "isVerified": false,
        "owner": Object {
          "email": "user1@gmail.com",
          "fullName": "User 1",
          "id": "1",
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [],
        "serviceFee": 0,
        "size": 0,
        "street": "FoodleStreet",
        "streetNumber": 0,
        "title": "titlee",
        "zip": 0,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property can create a listing, frequency none 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "bookings": Array [],
        "city": "Germany2",
        "deposit": 0,
        "description": "",
        "hourlyPrice": 0,
        "images": Array [
          "",
        ],
        "isVerified": false,
        "owner": Object {
          "email": "user1@gmail.com",
          "fullName": "User 1",
          "id": "1",
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [],
        "serviceFee": 0,
        "size": 0,
        "street": "FoodleStreet",
        "streetNumber": 0,
        "title": "titlee",
        "zip": 0,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property can create a listing, frequency weekly 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "bookings": Array [],
        "city": "Germany2",
        "deposit": 0,
        "description": "",
        "hourlyPrice": 0,
        "images": Array [
          "",
        ],
        "isVerified": false,
        "owner": Object {
          "email": "user1@gmail.com",
          "fullName": "User 1",
          "id": "1",
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [],
        "serviceFee": 0,
        "size": 0,
        "street": "FoodleStreet",
        "streetNumber": 0,
        "title": "titlee",
        "zip": 0,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
